# PPEM-project

./: .gitignore  CMakeLists.txt  CMakeVS2022.bat  README.md  md5_ref.txt
C6678/.metadata/: version.ini
C6678/.metadata/.plugins/com.ti.ccstudio.builddefinitions.generator/6.1.3/: C2000_15.12.xml  C6000_7.4.xml  C6000_8.1.xml  MSP430_15.12.xml  MSP432_15.12.xml  TMS470_15.12.xml
C6678/.metadata/.plugins/org.eclipse.cdt.core/: stereo_matching_openmp.1764687212472.pdom
C6678/.metadata/.plugins/org.eclipse.core.resources/: 0.snap
C6678/.metadata/.plugins/org.eclipse.core.resources/.projects/RemoteSystemsTempFiles/org.eclipse.egit.core/: GitProjectData.properties
C6678/.metadata/.plugins/org.eclipse.core.resources/.projects/stereo_matching_openmp/: .markers.snap
C6678/.metadata/.plugins/org.eclipse.core.resources/.projects/stereo_matching_openmp/.indexes/: properties.index
C6678/.metadata/.plugins/org.eclipse.core.resources/.projects/stereo_matching_openmp/.indexes/33/: history.index
C6678/.metadata/.plugins/org.eclipse.core.resources/.projects/stereo_matching_openmp/.indexes/af/: history.index
C6678/.metadata/.plugins/org.eclipse.core.resources/.projects/stereo_matching_openmp/org.eclipse.egit.core/: GitProjectData.properties
C6678/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
C6678/.metadata/.plugins/org.eclipse.debug.core/.launches/: TMS320C6678.ccxml.launch
C6678/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
C6678/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
C6678/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.pc-eb06s120-01_0/: node.properties
C6678/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.pc-eb06s120-01_0/FP.local.files_0/: node.properties
C6678/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.pc-eb06s120-01_0/H.local_16/: node.properties
C6678/.metadata/.plugins/org.eclipse.tm.terminal.connector.local/.executables/: data.properties
C6678/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
C6678/stereo_matching_openmp/: .ccsproject  .cproject  .project  omp_hello.c
C6678/stereo_matching_openmp/targetConfigs/: TMS320C6678.ccxml
dat/: yuv2dat.sh
docs/: BUILD_c6678.md  algorithm_analysis.md
include/: census.h  costConstruction.h  disparitySelect.h  displayRGB.h  md5.h  params.h  yuv2RGB.h  yuvRead.h
src/: computeWeights.c  costConstruction.c  disparitySelect.c  displayRGB.c  main.c  md5.c  rgb2Gray.c  yuv2RGB.c  yuvRead.c
